--- a/inputfiles.tex
+++ b/inputfiles.tex
@@ -43,7 +43,7 @@ A topology is completely specified by a set of beads, their types, and a list of
 \end{verbatim}
 
 
-In some cases, however, one might want to use a .pdb file which does not contain all information about the atomistic topology. In this case, additional information can be supplied in the \xml mapping file.
+In some cases, however, one might want to use a .pdb, H5MD or .dump file which does not contain all information about the atomistic topology. In this case, additional information can be supplied in the \xml mapping file.
 
 A typical example is lack of a clear definition of molecules, which can be a problem for simulations with several molecules with multiple types. During coarse-graining, the molecule type is identified by a name tag as names must be clearly identified. To do this, it is possible to read a topology and then modify parts of it. The new \xml topology can be used with the \progopt{---tpr} option, as any other topology file.
 
@@ -71,10 +71,66 @@ If molecule information is already present in the parent topology but molecules 
 \end{lstlisting}
 Here, the file \progopt{topol.tpr} is loaded first and all molecules are renamed afterwards.
 
+If you do not have a .pdb/.gro file and want to read trajectory from LAMMPS .dump file or H5MD then it is also possible to directly define topology in \xml file.
+Here is an example of such file for the case of butane, where trajectory is read from H5MD file
+\begin{lstlisting}
+<topology>
+    <!-- particle group name in H5MD file -->
+    <h5md_particle_group name="atoms" />
+    <molecules>
+        <!-- define molecule, number of beads, number of mols -->
+        <molecule name="BUT" nmols="4000" nbeads="4">
+            <!-- composition of molecule, bead definition -->
+            <bead name="C1" type="C" mass="15.035" q="0.0" />
+            <bead name="C2" type="C" mass="14.028" q="0.0" />
+            <bead name="C3" type="C" mass="14.028" q="0.0" />
+            <bead name="C4" type="C" mass="15.035" q="0.0" />
+        </molecule>
+    </molecules>
+    <!-- bonded terms -->
+    <bonded>
+        <bond>
+            <name>bond1</name>
+            <beads>
+                BUT:C1 BUT:C2
+            </beads>
+        </bond>
+        <bond>
+            <name>bond2</name>
+            <beads>
+                BUT:C2 BUT:C3
+            </beads>
+        </bond>
+        <angle>
+            <name>angle1</name>
+            <beads>
+                BUT:C1 BUT:C2 BUT:C3
+                BUT:C2 BUT:C3 BUT:C4
+            </beads>
+        </angle>
+        <dihedral>
+            <name>dihedral1</name>
+            <beads>
+                BUT:C1 BUT:C2 BUT:C3 BUT:C4
+            </beads>
+        </dihedral>
+    </bonded>
+</topology>
+\end{lstlisting}
+
+The section ordered list \texttt{molecules} contains information about the beads in the trajectory file.
+The beads \texttt{<bead>} will be replicated \texttt{nmols} times and then the next \texttt{molecule} will be use.
+
+The H5MD format contains information about box size but one can it define directly in the \xml file by tag
+\begin{lstlisting}
+<box xx="6.0" yy="6.0" zz="6.0" />
+\end{lstlisting}
+where \texttt{xx, yy, zz} are the dimensions of the box.
+
 \section{Trajectories}
 \label{sec:trajectory}
 
-A trajectory is a set of frames containing coordinates (velocities and forces) for the beads defined in the topology. \votca currently supports \texttt{.trr}, \texttt{.xtc}, \texttt{.pdb} and \texttt{.gro} trajectory formats.
+A trajectory is a set of frames containing coordinates (velocities and forces) for the beads defined in the topology. \votca currently supports \texttt{.trr}, \texttt{.xtc}, \texttt{.pdb}, \texttt{.gro} and H5MD \texttt{.h5} trajectory formats.
 
 Once the mapping file is created, it is easy to convert an atomistic to a coarse-grained trajectory using \prog{csg_map}
 \begin{verbatim}
