--- a/inputfiles.tex
+++ b/inputfiles.tex
@@ -127,7 +127,7 @@ The box size can be set by the tag \texttt{box}:
 \end{lstlisting}
 where \texttt{xx, yy, zz} are the dimensions of the box.
 
-A complete reference for \xml topology file can be found in sec.~\ref{sec:ref_topol}.
+A complete reference for \xml topology file can be found in sec.~\ref{sec:ref_topology}.
 
 \section{Trajectories}
 \label{sec:trajectory}
